# AUTOMATED-DASHBOARD

./: Licence  README.md  Readme.md  pyproject.toml  requirements-dev.txt  requirements.txt
dashboard/: app.py
dashboard/components/: filters.py
dashboard/components/dashboard/components/: __init__.py
dashboard/components/dashboard/components/dashboard/utils/: helpers.py
dashboard/components/dashboard/components/dashboard/utils/infrastructure/: docker-compose.yml
dashboard/dashboard/components/: metrics.py
dashboard/dashboard/components/dashboard/components/: charts.py
dashboard/dashboard/components/dashboard/components/dashboard/utils/: data_loader.py
infrastructure/: Dockerfile
infrastructure/infrastructure/k8s/: deployment.yaml
pipelines/: etl_dag.py
scripts/: setup.sh
scripts/scripts/: deploy.sh
